# langchain-base-setup

./: pyproject.toml
app/: main.py
app/agents/: agent1.py  (+1 more)
transcripts-downloaded/: 10_Dungeons of Drakkenheim Episode 10_ Hell or High Pond Water.txt  11_Dungeons Of Drakkenheim Episode 11_ Killer Queen.txt  12_Dungeons Of Drakkenheim Episode 12_ Juice Cleanse.txt  13_Dungeons Of Drakkenheim Episode 13_ Parent Trap.txt  14_Dungeons Of Drakkenheim Episode 14_ Chasing Shadows.txt  15_Dungeons of Drakkenheim Episode 15_ Ashes to Ashes.txt  16_Dungeons of Drakkenheim Episode 16_ Fire and Steel.txt  17_Dungeons of Drakkenheim Episode 17_ Truth Be Told.txt  18_Dungeons of Drakkenheim Episode 18_ Clouded Judgement.txt  19_Dungeons of Drakkenheim Episode 19_ Climbing Tension.txt  1_Dungeons of Drakkenheim Episode 1_ The Rat's Nest.txt  20_Dungeons of Drakkenheim Episode 20_ Deceit & Discovery.txt  21_Dungeons of Drakkenheim Episode 21 - Fresh Meat.txt  22_Dungeons of Drakkenheim Episode 22_ Down The Hatch.txt  24_Dungeons of Drakkenheim Episode 24 - Jaws of Defeat.txt  25_Dungeons of Drakkenheim Episode 25_ To Hell With You.txt  26_Dungeons of Drakkenheim Episode 26_ Bridge the Gap.txt  27_Dungeons of Drakkenheim Episode 27_ Allies and Adversaries.txt  28_Dungeons of Drakkenheim Episode 28. The Battle Of Temple Gate.txt  29_Dungeons of Drakkenheim Episode 29_ The Battle Of Temple Gate Part 2.txt  2_Dungeons of Drakkenheim Episode 2_ Potion Inspectors.txt  30_Dungeons of Drakkenheim Episode 30_ Potion Shop of Horrors.txt  31_Dungeons of Drakkenheim Episode 31_ Pack Tactics.txt  (+28 more)
(+5 files in other folders)
